--- a/style.tex
+++ b/style.tex
@@ -10,6 +10,7 @@
 \usepackage[english, russian]{babel}	% локализация и переносы
 % \usepackage{stix2}
 \usepackage{natbib}
+\usepackage{amsfonts}
 
 \usepackage{graphicx}
 \graphicspath{{pix/}}
@@ -85,7 +86,7 @@
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\Norm}{\mathcal{N}}
-%\newcommand{\C}{\mathbb{C}}
+\newcommand{\Cmp}{\mathbb{C}}
 \newcommand{\ind}{\perp \!\!\! \perp}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\E}{{\mathbb{E}}}
