--- a/solutions/analysis/2.tex
+++ b/solutions/analysis/2.tex
@@ -1,1 +1,26 @@
 \subsection{Ограниченность функции, непрерывной на отрезке, достижение точных верхней и нижней граней.}
+
+\Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $f$ непрерывна в точке $x_0$, если $\exists \lim\limits_{x \to x_0} f(x) = f(x_0)$.
+
+\Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$.Будем говорить, что $f$ разрывна в точке $x_0$, если она не непрерывна в точке $x_0$.
+
+\Note Не входит как в таковой билет, но в лекции говорится, что надо знать как <<отче наш>>. Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$.
+\begin{enumerate}
+    \item \textit{Устранимый разрыв.} $\exists \lim\limits_{x \to x_0} f(x) \in \R$, но $\lim\limits_{x \to x_0} f(x) \neq f(x_0)$.
+    \item \textit{Разрыв первого рода.} $\exists \lim\limits_{x \to x_0 - 0} f(x) \in \R, \exists \lim\limits_{x \to x_0 + 0} f(x) \in \R$, но $\lim\limits_{x \to x_0 - 0} f(x) \neq \lim\limits_{x \to x_0 + 0} f(x)$.
+    \item \textit{Разрыв второго рода.} Хотя бы один из односторонних пределов не существует, либо бесконечен.
+\end{enumerate}
+
+\Def Пусть $X \subset \R, f: X \to \R$. Будем говорить, что $f$ непрерывна на $X$, если она непрерывна в каждой точке.
+
+\Def Класс всех непрерывных функций на $X$ будем обозначать $f \in C(X)$.
+
+\Th Пусть $K \subset \R$ - компакт, $f \in C(K)$. Тогда $f(K)$ тоже компакт.
+
+\Proof
+
+Пусть $\{y_n\} \subset f(K) \Rightarrow \exists \{x_n\} \subset K: \forall n \in \N \hookrightarrow f(x_n) = y_n \Rightarrow \exists \{x_{n_j}\} \subset K: \lim\limits_{j \to \infty} x_{n_j} = x^* \in K \Rightarrow \lim\limits_{j \to \infty} f(x_{n_j}) = f(x^*) = y^* \in f(K)$.
+
+То есть для любой последовательности $\{y_n\}$ в $f(K)$ найдется подпоследовательность $\{y_{n_j}\}$, такая что её предел сходится к $y^* \in f(K)$. Значит $f(K)$ - компакт, по определению.
+
+\Endproof
