--- a/solutions/analysis/2.tex
+++ b/solutions/analysis/2.tex
@@ -13,7 +13,7 @@
 
 \Def Пусть $X \subset \R, f: X \to \R$. Будем говорить, что $f$ непрерывна на $X$, если она непрерывна в каждой точке.
 
-\Def Класс всех непрерывных функций на $X$ будем обозначать $f \in C(X)$.
+\Def Класс всех непрерывных функций на $X$ будем обозначать $C(X)$.
 
 \Th Пусть $K \subset \R$ - компакт, $f \in C(K)$. Тогда $f(K)$ тоже компакт.
 
