--- a/solutions/differential/20.tex
+++ b/solutions/differential/20.tex
@@ -239,7 +239,7 @@ $P(\lambda) = p_0 (\lambda - q_1) (\lambda - q_2) \dots (\lambda - q_n)$
 
 По предыдущей лемме, $P(D)(e^{\mu x} x^k) = e^{\mu x} (D + (\mu - q_1) I) \circ \dots \circ (D + (\mu - q_n) I) (x^k)$
 
-Если $m \neq q_i$, то применение оператора дифференцирования не понижает степень $x^k$, а если $m = q_i$, то $(D + (\mu - q_n I)) (x^p) = x^p' = px^{p-1}$ -- степень понизилась на 1.
+Если $m \neq q_i$, то применение оператора дифференцирования не понижает степень $x^k$, а если $m = q_i$, то $(D + (\mu - q_n I)) (x^p) = (x^p)' = px^{p-1}$ -- степень понизилась на 1.
 
 Так как мы хотим в итоге получить константный ноль, то значит $\mu = q_i$ для как минимум $k+1$ различных индексов $i$ (Пояснение: чтобы $x_k$ превратился в 0 его нужно продифференцировать хотя бы $k+1$ раз).
 
