--- a/problems/differential.tex
+++ b/problems/differential.tex
@@ -217,7 +217,7 @@
     y &= C_1 e^x + C_2 e^{2x} + (x-1) e^{2x}
 \end{align*}
 
-(Можно переписать как $y &= C_1 e^x + C_3 e^{2x} + xe^{2x}$)
+(Можно переписать как $y = C_1 e^x + C_3 e^{2x} + xe^{2x}$)
 
 \subsubsection{Однородное линейное уравнение с корнем кратности 3}
 
